--- a/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
+++ b/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
@@ -59,7 +59,7 @@
         </ul>
       </li>
 
-      <a class="menu-item" routerLink="/cargas" routerLinkActive="active">
+      <a class="menu-item" routerLink="cargas" routerLinkActive="active">
         <i class="icon fas fa-box"></i>
         <span *ngIf="!isClosed">Cargas</span>
       </a>
