--- a/frota-pro/src/app/features/metas/metas.component.css
+++ b/frota-pro/src/app/features/metas/metas.component.css
@@ -106,10 +106,10 @@
 }
 
 .delete {
-  background: #dc3545;
+  background: #1976d2;
+  color: #000;
   padding: 8px 14px;
   border-radius: 6px;
-  color: white;
 }
 
 /* Estilo padrão dos botões */
@@ -143,13 +143,7 @@ button.nova-meta-btn:hover {
   transform: scale(1.05);
 }
 
-/* Excluir */
-.btn-delete {
-  background: #e53935;
-  color: #fff;
-}
-
-.btn-delete:hover {
-  background: #b72828;
+.delete:hover {
+  background: #83bcf5;
   transform: scale(1.05);
 }
