--- a/frota-pro/src/app/features/metas/metas.component.css
+++ b/frota-pro/src/app/features/metas/metas.component.css
@@ -48,8 +48,16 @@
   gap: 10px;
 }
 
-.form-buttons .cancel {
-  background: #777;
+.bnt-form{
+  background: #1976d2;
+  color: #000;
+  padding: 8px 14px;
+  border-radius: 6px;
+}
+
+.bnt-form:hover{
+  background: #83bcf5;
+  transform: scale(1.05);
 }
 
 .meta-list {
@@ -118,13 +126,7 @@ button {
   transition: 0.25s ease;
 }
 
-/* Botão de Nova Meta */
-button.nova-meta-btn {
-  background: #1976d2;
-  color: white;
-}
-
-button.nova-meta-btn:hover {
+button.btn-add:hover {
   background: #125ba1;
   transform: scale(1.03);
   box-shadow: 0 0 6px rgba(0,0,0,0.2);
